mdapipkg/objects/Push_Notification_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <description>Push Notification Body</description>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Click_Action__c</fullName>
        <label>Click Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Push Notification Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Push Notification Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Push Notification Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>